Polish and humanize the title for the entry of Text and Reading Options in SuW.
Bug: 219163254
Test: manual test
Change-Id: Ic908918a1b4978dd10e42e13c619bb8d0a697467

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5230,6 +5230,8 @@
     <string name="accessibility_introduction_title">About <xliff:g id="service" example="Select to Speak">%1$s</xliff:g></string>
     <!-- Title for the accessibility preference to adjust the display size, font size, bold text, and high contrast text features. [CHAR LIMIT=NONE] -->
     <string name="accessibility_text_reading_options_title">Display size and text</string>
+    <!-- Title for the entry of the text reading options. [CHAR LIMIT=NONE] -->
+    <string name="accessibility_text_reading_options_suggestion_title">Change how text displays</string>
     <!-- Subject for the mail content of the accessibility text reading preview. [CHAR LIMIT=NONE] -->
     <string name="accessibility_text_reading_preview_mail_subject">Email: Plans for time machine, v2</string>
     <!-- Message for the mail content of the accessibility text reading preview. [CHAR LIMIT=NONE] -->
