Update the show wallet settings description label.
Bug: 219635505
Test: manual
Change-Id: I65704c196066df3b3a8bd348a81726c559bdae93

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13332,7 +13332,7 @@
     <!-- Wallet (formerly Cards and passes) toggle name [CHAR LIMIT=60] -->
     <string name="lockscreen_privacy_wallet_setting_toggle">Show wallet</string>
     <!-- Wallet (formerly Cards and passes) summary [CHAR LIMIT=NONE] -->
-    <string name="lockscreen_privacy_wallet_summary">Allow access to wallet from lock screen and quick settings</string>
+    <string name="lockscreen_privacy_wallet_summary">Allow access to wallet from lock screen</string>
 
     <!-- QR Code Scanner toggle name [CHAR LIMIT=60] -->
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle">Show QR scanner</string>
