--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -487,7 +487,7 @@
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"При всяко преместване на иконата за отпечатъци я докоснете и задръжте. По този начин се улавя най-голяма част от отпечатъка ви."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Поставете върха на пръста си върху сензора"</string>
     <string name="security_settings_udfps_enroll_edge_title" msgid="2969257985923971906">"Накрая поставете краищата на пръста си"</string>
-    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Поставете едната страна на отпечатъка си върху сензора и задръжте, след това поставете другата"</string>
+    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Поставете едната страна на пръста си върху сензора и задръжте, след това поставете другата"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"По този начин се улавя най-голяма част от отпечатъка ви"</string>
     <!-- String.format failed for translation -->
     <!-- no translation found for security_settings_udfps_enroll_progress_a11y_message (6183535114682369699) -->
