--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -4654,7 +4654,7 @@
     <string name="condition_battery_title" msgid="6395113995454385248">"Ušteda baterije je uključena"</string>
     <string name="condition_battery_summary" msgid="8436806157833107886">"Funkcije su ograničene"</string>
     <string name="condition_cellular_title" msgid="155474690792125747">"Prijenos podataka na mobilnoj mreži je isključen"</string>
-    <string name="condition_cellular_summary" msgid="1678098728303268851">"Internet je dostupan samo putem WiFi mreže"</string>
+    <string name="condition_cellular_summary" msgid="1678098728303268851">"Internet je dostupan samo putem WiFi-ja"</string>
     <string name="condition_bg_data_title" msgid="2719263664589753094">"Ušteda podataka"</string>
     <string name="condition_bg_data_summary" msgid="1736255283216193834">"Funkcije su ograničene"</string>
     <string name="condition_work_title" msgid="174326145616998813">"Radni profil je isključen"</string>
