--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -495,7 +495,7 @@
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Нажимайте и удерживайте значок каждый раз, когда он перемещается. Так отпечаток пальца будет более точным."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Коснитесь датчика и удерживайте его подушечкой пальца"</string>
     <string name="security_settings_udfps_enroll_edge_title" msgid="2969257985923971906">"Мы почти закончили"</string>
-    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Наклоните палец вбок, нажмите и удерживайте датчик. Затем поменяйте положение пальца и повторите действия."</string>
+    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Наклоните палец набок, нажмите на датчик и удерживайте. Затем наклоните палец на другой бок и повторите действия."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Так отпечаток пальца будет более точным"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Процент выполнения задачи по добавлению отпечатка пальца: <xliff:g id="PERCENTAGE">%d</xliff:g>."</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Отпечаток добавлен"</string>
