Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I3127e1d696f00a9d496edaa5ed672ac1820da936

--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -3193,7 +3193,7 @@
     <string name="data_usage_metered_no" msgid="1685828958417926268">"Bepul"</string>
     <string name="data_usage_disclaimer" msgid="3271450299386176770">"Aloqa operatorining hisob-kitobi qurilmanikidan farq qilishi mumkin."</string>
     <string name="cryptkeeper_emergency_call" msgid="8369322820475703306">"Favqulodda chaqiruv"</string>
-    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"Suhbatga qaytish"</string>
+    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"Chaqiruvga qaytish"</string>
     <string name="vpn_name" msgid="3806456074909253262">"Tarmoq nomi"</string>
     <string name="vpn_type" msgid="5533202873260826663">"Turi"</string>
     <string name="vpn_server" msgid="2908816134941973935">"Server manzili"</string>
@@ -5528,7 +5528,7 @@
     <string name="smart_forwarding_input_mdn_dialog_title" msgid="7542216086697868415">"Telefon raqamini kiriting"</string>
     <string name="smart_forwarding_missing_mdn_text" msgid="2907314684242542226">"Telefon raqami kiritilmagan."</string>
     <string name="smart_forwarding_missing_alert_dialog_text" msgid="7870419247987316112">"OK"</string>
-    <string name="enable_2g_title" msgid="8184757884636162942">"2G tarmoqqa ruxsat bering"</string>
+    <string name="enable_2g_title" msgid="8184757884636162942">"2G uchun ruxsat"</string>
     <string name="enable_2g_summary" msgid="906487478332145407">"2G mobil internetidan foydalaning. Favqulodda chaqiruvlar uchun 2G doim yoniq turadi."</string>
     <string name="show_clip_access_notification" msgid="7782300987639778542">"Vaqtinchalik xotiraga kirish haqida ogohlantirish"</string>
     <string name="show_clip_access_notification_summary" msgid="474090757777203207">"Ilovalar siz nusxa olgan matn, rasmlar yoki boshqa kontentdan foydalanganda xabar chiqarish"</string>
