--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -487,7 +487,7 @@
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Сүрөтчө жылган сайын аны коё бербей басып туруңуз. Бул манжаңыздын изин көбүрөөк тартууга жардам берет."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Манжаңыздын учун сенсорго коюңуз"</string>
     <string name="security_settings_udfps_enroll_edge_title" msgid="2969257985923971906">"Эми манжаңыздын четтерин коюңуз"</string>
-    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Манжаңыздын бир тарабын сенсорго коюп, кармап туруңуз, андан кийин башка тарабына которулуңуз"</string>
+    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Манжаңызды сенсорго капталдатып коюп, кармап туруңуз, андан кийин башка капталдарын коюңуз."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Бул манжаңыздын изин көбүрөөк тартууга жардам берет"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Манжа изи катталууда: <xliff:g id="PERCENTAGE">%d</xliff:g> пайыз"</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Манжа изи кошулду"</string>
@@ -3413,7 +3413,7 @@
     <string name="preferred_network_type_title" msgid="812509938714590857">"Тармактын түрү"</string>
     <string name="preferred_network_type_summary" msgid="8786291927331323061">"LTE (сунушталат)"</string>
     <string name="mms_message_title" msgid="6624505196063391964">"MMS билдирүүлөр"</string>
-    <string name="mms_message_summary" msgid="2855847140141698341">"Мобилдик трафик өчүк кезде жөнөтүү жана кабыл алуу"</string>
+    <string name="mms_message_summary" msgid="2855847140141698341">"MMS билдирүүлөрдү мобилдик Интернет өчүк кезде жөнөтүп, кабыл аласыз"</string>
     <string name="data_during_calls_title" msgid="3940276893360429144">"Чалуу учурундагы трафик"</string>
     <string name="data_during_calls_summary" msgid="2289050189544214759">"Бул SIM карта чалуу учурунда мобилдик Интернетти пайдалануу үчүн гана колдонулат"</string>
     <string name="work_sim_title" msgid="8999872928646924429">"Жумуш SIM"</string>
