Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I97f82f3f3ab3ac037a2b28c4e0c0db21398a605c

--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -5008,7 +5008,7 @@
     <string name="storage_percent_full" msgid="7211888326013020857">"kasut."</string>
     <string name="storage_usage_summary" msgid="4591121727356723463">"Kasutatud on <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
     <string name="storage_total_summary" msgid="7163360249534964272">"Kokku <xliff:g id="NUMBER">%1$s</xliff:g> <xliff:g id="UNIT">%2$s</xliff:g>"</string>
-    <string name="clear_instant_app_data" msgid="5951258323364386357">"Tühjenda rakendus"</string>
+    <string name="clear_instant_app_data" msgid="5951258323364386357">"Kustuta rakendus"</string>
     <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"Kas soovite selle installimata avatava rakenduse eemaldada?"</string>
     <string name="launch_instant_app" msgid="8503927414339606561">"Ava"</string>
     <string name="game_storage_settings" msgid="2521393115726178837">"Mängud"</string>
