--- a/res/values-as/strings.xml
+++ b/res/values-as/strings.xml
@@ -472,7 +472,7 @@
     <string name="security_settings_fingerprint_enroll_find_sensor_message" msgid="6160543980992596286">"ফিংগাৰপ্ৰিণ্টটো আপোনাৰ ফোনৰ পিছফালে আছে। আপোনাৰ তৰ্জনী আঙুলি ব্যৱহাৰ কৰক।"</string>
     <string name="security_settings_udfps_enroll_find_sensor_message" msgid="8383106460819519961">"ফিংগাৰপ্ৰিণ্ট ছেন্সৰটো আপোনাৰ স্ক্ৰীনত আছে। আপুনি পৰৱৰ্তী স্ক্ৰীনখনত নিজৰ ফিংগাৰপ্ৰিণ্ট কেপচাৰ কৰিব।"</string>
     <string name="security_settings_udfps_enroll_find_sensor_start_button" msgid="3172268783620336357">"আৰম্ভ কৰক"</string>
-    <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"ছেন্সৰটো বিচাৰিবলৈ আপোনাৰ আঙুলিটো স্ক্ৰীনখনৰ চাৰিওফালে ঘূৰাওক। ফিংগাৰপ্ৰিণ্ট ছেন্সটোৰ স্পৰ্শ কৰি ধৰি ৰাখক।"</string>
+    <string name="security_settings_udfps_enroll_a11y" msgid="1899453114050362235">"ছেন্সৰটো বিচাৰিবলৈ আপোনাৰ আঙুলিটো স্ক্ৰীনখনৰ চাৰিওফালে ঘূৰাওক। ফিংগাৰপ্ৰিণ্ট ছেন্সৰটোত স্পৰ্শ কৰি ধৰি ৰাখক।"</string>
     <string name="security_settings_fingerprint_enroll_find_sensor_content_description" msgid="3065850549419750523">"ডিভাইচ আৰু ফিংগাৰপ্ৰিণ্ট ছেন্সৰ অৱস্থানৰ সৈতে চিত্ৰণ"</string>
     <string name="security_settings_fingerprint_enroll_dialog_name_label" msgid="7298812463228440333">"নাম"</string>
     <string name="security_settings_fingerprint_enroll_dialog_ok" msgid="4074335979239208021">"ঠিক"</string>
@@ -480,7 +480,7 @@
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"ছেন্সৰটো স্পৰ্শ কৰক"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"আপোনাৰ আঙুলিটো ছেন্সৰটোত ৰাখক আৰু এটা কম্পন অনুভৱ কৰাৰ পিছত আঁতৰাওক"</string>
     <string name="security_settings_udfps_enroll_start_message" msgid="7534383192863798967">"আপুনি এটা কম্পন অনুভৱ নকৰালৈকে নিজৰ আঙুলিটো ছেন্সৰটোত ৰাখক"</string>
-    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"ফিংগাৰপ্ৰিণ্ট ছেন্সটোৰ স্পৰ্শ কৰি ধৰি ৰাখক"</string>
+    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"ফিংগাৰপ্ৰিণ্ট ছেন্সৰটোত স্পৰ্শ কৰি ধৰি ৰাখক"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"ওপৰলৈ উঠাওক, তাৰ পিছত পুনৰ স্পৰ্শ কৰক"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"আৰু এবাৰ"</string>
     <string name="security_settings_udfps_enroll_repeat_title_touch_icon" msgid="4096344864386190335">"ফিংগাৰপ্ৰিণ্টৰ চিহ্নটো অনুসৰণ কৰক"</string>
@@ -493,7 +493,7 @@
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"ফিংগাৰপ্ৰিণ্ট <xliff:g id="PERCENTAGE">%d</xliff:g> শতাংশ পঞ্জীয়ন কৰা হ\'ল"</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"ফিংগাৰপ্ৰিণ্ট যোগ কৰা হ’ল"</string>
     <string name="security_settings_fingerprint_enroll_finish_message" msgid="3469254005423998143">"এতিয়া আপুনি নিজৰ ফ’নটো আনলক কৰিবলৈ অথবা এপত ছাইন ইন কৰাৰ দৰে কাৰ্য কৰোঁতে এইয়া আপুনিয়েই বুলি সত্যাপন কৰিবলৈ নিজৰ ফিংগাৰপ্ৰিণ্ট ব্যৱহাৰ কৰিব পাৰে"</string>
-    <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"এইটো পিছত কৰিব"</string>
+    <string name="security_settings_fingerprint_enroll_enrolling_skip" msgid="3004786457919122854">"এইটো পাছত কৰিব"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_title" msgid="352947044008973812">"ফিংগাৰপ্ৰিণ্ট ছেট আপ নকৰাকৈ এৰি যাব নেকি?"</string>
     <string name="setup_fingerprint_enroll_enrolling_skip_message" msgid="4876965433600560365">"আপুনি আপোনাৰ ফ\'নটো আনলক কৰাৰ এটা উপায় হিচাপে ফিংগাৰপ্ৰিণ্ট বাছনি কৰিছে। আপুনি যদি এতিয়া এইটো ছেট আপ নকৰে, তেন্তে পিছতো কৰিব পাৰিব। ছেট আপ কৰিবলৈ এক মিনিটমানহে সময় লাগিব।"</string>
     <string name="lock_screen_pin_skip_message" product="tablet" msgid="4938798234214623521">"এটা পিনে টেবলেটটো হেৰালে অথবা চুৰি হ’লে সেইটো সুৰক্ষিত কৰে"</string>
