--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -480,7 +480,7 @@
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"സെൻസർ സ്പർശിക്കുക"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"സെൻസറിൽ വിരൽ വച്ച് വൈബ്രേഷൻ അനുഭവപ്പെട്ട ശേഷം വിരൽ മാറ്റുക."</string>
     <string name="security_settings_udfps_enroll_start_message" msgid="7534383192863798967">"വൈബ്രേഷൻ അനുഭവപ്പെടുന്നത് വരെ സെൻസറിൽ വിരൽ വയ്ക്കുക"</string>
-    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"വിരലടയാള സെൻസറിൽ സ്‌പർശിച്ചുപിടിക്കുക"</string>
+    <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"ഫിംഗർപ്രിന്റ് സെൻസറിൽ സ്‌പർശിച്ചുപിടിക്കുക"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"വിരലെടുക്കുക, വീണ്ടും സ്പർശിക്കുക"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"ഒരിക്കൽ കൂടി"</string>
     <string name="security_settings_udfps_enroll_repeat_title_touch_icon" msgid="4096344864386190335">"ഫിംഗർപ്രിന്റ് ഐക്കൺ പിന്തുടരുക"</string>
