--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -2069,8 +2069,8 @@
     <string name="ask_compatibility" msgid="8388397595148476565">"Perguntar ao iniciar"</string>
     <string name="enable_compatibility" msgid="1163387233622859712">"Dimensionar app"</string>
     <string name="unknown" msgid="8192160131923461175">"Desconhecido"</string>
-    <string name="sort_order_alpha" msgid="3400680865280266582">"Classificar por nome"</string>
-    <string name="sort_order_size" msgid="7731928486199737223">"Classificar por tamanho"</string>
+    <string name="sort_order_alpha" msgid="3400680865280266582">"Ordenar por nome"</string>
+    <string name="sort_order_size" msgid="7731928486199737223">"Ordenar por tamanho"</string>
     <string name="sort_order_recent_notification" msgid="1496198895330443073">"Mais recentes"</string>
     <string name="sort_order_frequent_notification" msgid="4063700985742284794">"Mais frequentes"</string>
     <string name="show_running_services" msgid="8666008279959853318">"Mostrar serviços em exec."</string>
@@ -2132,7 +2132,7 @@
     <string name="app_ops_never_used" msgid="9038133162371204506">"(Nunca usado)"</string>
     <string name="no_default_apps" msgid="8966319676910104570">"Nenhum app padrão."</string>
     <string name="storageuse_settings_title" msgid="3125650750657988194">"Uso do armazenamento"</string>
-    <string name="storageuse_settings_summary" msgid="5001621552305431831">"Visualizar armazenamento usado pelos apps"</string>
+    <string name="storageuse_settings_summary" msgid="5001621552305431831">"Ver armazenamento usado pelos apps"</string>
     <string name="service_restarting" msgid="5104563288155809226">"Reiniciando"</string>
     <string name="cached" msgid="5379485147573438201">"Processo em segundo plano em cache"</string>
     <string name="no_running_services" msgid="9079738069349859373">"Nada em execução."</string>
@@ -2265,7 +2265,7 @@
     <string name="allow_bind_app_widget_activity_always_allow_bind" msgid="7268758525344468364">"Sempre permitir que <xliff:g id="WIDGET_HOST_NAME">%1$s</xliff:g> crie widgets e acesse os dados"</string>
     <string name="usage_stats_label" msgid="6523644917803320085">"Estatísticas de uso"</string>
     <string name="testing_usage_stats" msgid="4660643799010906365">"Estatísticas de uso"</string>
-    <string name="display_order_text" msgid="7120394778684605892">"Classificar por:"</string>
+    <string name="display_order_text" msgid="7120394778684605892">"Ordenar por:"</string>
     <string name="app_name_label" msgid="3809910527680143673">"App"</string>
     <string name="last_time_used_label" msgid="2639712813493534074">"Última utilização"</string>
     <string name="usage_time_label" msgid="9105343335151559883">"Tempo de uso"</string>
@@ -3999,7 +3999,7 @@
       <item quantity="other"><xliff:g id="COUNT_1">%d</xliff:g> categorias</item>
     </plurals>
     <string name="no_channels" msgid="4716199078612071915">"Este app não postou nenhuma notificação"</string>
-    <string name="app_settings_link" msgid="6725453466705333311">"Configurações adicionais no app"</string>
+    <string name="app_settings_link" msgid="6725453466705333311">"Configurações avançadas no app"</string>
     <string name="notification_screen_summary" msgid="5984915275134654822">"Histórico de notificações, balões, mensagens enviadas recentemente"</string>
     <string name="app_notification_listing_summary_zero" msgid="2988400013221120744">"Ativadas para todos os apps"</string>
     <plurals name="app_notification_listing_summary_others" formatted="false" msgid="1506127395400503717">
@@ -4460,8 +4460,8 @@
     <string name="memory_details" msgid="6133226869214421347">"Detalhes"</string>
     <string name="memory_use_summary" msgid="3915964794146424142">"<xliff:g id="SIZE">%1$s</xliff:g> de memória média usada nas últimas três horas"</string>
     <string name="no_memory_use_summary" msgid="6708111974923274436">"Nenhuma memória foi usada nas últimas três horas"</string>
-    <string name="sort_avg_use" msgid="4416841047669186903">"Classificar por uso médio"</string>
-    <string name="sort_max_use" msgid="3370552820889448484">"Classificar por uso máximo"</string>
+    <string name="sort_avg_use" msgid="4416841047669186903">"Ordenar por uso médio"</string>
+    <string name="sort_max_use" msgid="3370552820889448484">"Ordenar por uso máximo"</string>
     <string name="memory_performance" msgid="5448274293336927570">"Desempenho"</string>
     <string name="total_memory" msgid="5244174393008910567">"Memória total"</string>
     <string name="average_used" msgid="690235917394070169">"Média usada (%)"</string>
