--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -3195,7 +3195,7 @@
     <string name="data_usage_metered_no" msgid="1685828958417926268">"Bepul"</string>
     <string name="data_usage_disclaimer" msgid="3271450299386176770">"Aloqa operatorining hisob-kitobi qurilmanikidan farq qilishi mumkin."</string>
     <string name="cryptkeeper_emergency_call" msgid="8369322820475703306">"Favqulodda chaqiruv"</string>
-    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"Suhbatga qaytish"</string>
+    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"Chaqiruvga qaytish"</string>
     <string name="vpn_name" msgid="3806456074909253262">"Tarmoq nomi"</string>
     <string name="vpn_type" msgid="5533202873260826663">"Turi"</string>
     <string name="vpn_server" msgid="2908816134941973935">"Server manzili"</string>
