Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Idba594ec1c8ce5633f197c8a91c4db39cb4eb5ab

--- a/res/values-bs/strings.xml
+++ b/res/values-bs/strings.xml
@@ -484,7 +484,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"Izbriši"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Dodirnite senzor"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Stavite prst na senzor i podignite ga kad osjetite vibraciju"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Držite otisak prsta ravno na senzoru dok ne osjetite vibraciju"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Držite prst ravno na senzoru dok ne osjetite vibraciju"</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Dodirnite i držite senzor za otisak prsta"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Podignite i ponovo dodirnite"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Još jednom"</string>
@@ -4676,7 +4676,7 @@
     <string name="condition_battery_title" msgid="6395113995454385248">"Ušteda baterije je uključena"</string>
     <string name="condition_battery_summary" msgid="8436806157833107886">"Funkcije su ograničene"</string>
     <string name="condition_cellular_title" msgid="155474690792125747">"Prijenos podataka na mobilnoj mreži je isključen"</string>
-    <string name="condition_cellular_summary" msgid="1678098728303268851">"Internet je dostupan samo putem WiFi mreže"</string>
+    <string name="condition_cellular_summary" msgid="1678098728303268851">"Internet je dostupan samo putem WiFi-ja"</string>
     <string name="condition_bg_data_title" msgid="2719263664589753094">"Ušteda podataka"</string>
     <string name="condition_bg_data_summary" msgid="1736255283216193834">"Funkcije su ograničene"</string>
     <string name="condition_work_title" msgid="174326145616998813">"Radni profil je isključen"</string>
