--- a/res/values-fa/strings.xml
+++ b/res/values-fa/strings.xml
@@ -488,7 +488,7 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"مدام انگشتتان را جابه‌جا کنید تا بخش‌های مختلف اثر انگشتتان را اضافه کنید"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"هر بار که نماد اثر انگشت حرکت می‌کند، لمس کنید و نگه دارید. این کار کمک می‌کند بخش بیشتری از اثر انگشتتان ثبت شود."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"نوک انگشتتان را روی حسگر قرار دهید"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"در آخر، از لبه‌های انگشت استفاده کنید"</string>
+    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"در آخر، کناره‌های انگشتتان را ثبت کنید"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"یک سمت انگشتتان را روی حسگر اثر انگشت قرار دهید و نگه دارید، سپس این کار را با سمت دیگر تکرار کنید"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"این کار کمک می‌کند بخش بیشتری از اثر انگشتتان ثبت شود"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"درحال ثبت اثر انگشت: <xliff:g id="PERCENTAGE">%d</xliff:g> درصد"</string>
