--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -488,7 +488,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"מחיקה"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"נגיעה בחיישן"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"יש להניח את האצבע על החיישן ולהרים אותה לאחר שמרגישים רטט"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"צריך לשמור שטביעת האצבע תהיה שטוחה על החיישן עד שמרגישים רטט"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"צריך להחזיק את האצבע כך שטביעת האצבע תהיה על החיישן, עד שמרגישים רטט"</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"לחיצה ארוכה על חיישן טביעות האצבע"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"להרים ולגעת בחיישן שוב"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"ושוב…"</string>
@@ -496,7 +496,7 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"יש להרים את האצבע ולגעת בחיישן עם חלקים שונים של האצבע לקבלת טביעת אצבע מלאה"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"לוחצים לחיצה ארוכה בכל פעם שסמל טביעת האצבע זז. כך יתועד חלק גדול יותר מהאצבע."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"מניחים את קצה האצבע על החיישן"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"לבסוף, משתמשים בקצוות האצבע"</string>
+    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"יש לסובב את קצה האצבע"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"מניחים צד אחד של האצבע על החיישן ומחזיקים. אחר כך עוברים לצד השני"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"כך יתועד חלק גדול יותר מהאצבע"</string>
     <!-- String.format failed for translation -->
