--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -488,7 +488,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"Удалить"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Коснитесь сканера отпечатков"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Прикладывайте палец к сканеру и удерживайте, пока не почувствуете вибрацию."</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Поместите палец на сканер и не убирайте его, пока не ощутите вибрацию."</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Приложите палец к сканеру и не убирайте его, пока не почувствуете вибрацию."</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Нажмите на сканер отпечатка пальца и удерживайте"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Коснитесь несколько раз"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Ещё раз"</string>
@@ -497,7 +497,7 @@
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Нажимайте и удерживайте значок каждый раз, когда он перемещается. Так отпечаток пальца будет более точным."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Коснитесь датчика и удерживайте его подушечкой пальца"</string>
     <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Осталось отсканировать края пальца"</string>
-    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Наклоните палец вбок, нажмите и удерживайте датчик. Затем поменяйте положение пальца и повторите действия."</string>
+    <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Наклоните палец набок, нажмите на датчик и удерживайте. Затем наклоните палец на другой бок и повторите действия."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Так отпечаток пальца будет более точным"</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"Процент выполнения задачи по добавлению отпечатка пальца: <xliff:g id="PERCENTAGE">%d</xliff:g>."</string>
     <string name="security_settings_fingerprint_enroll_finish_title" msgid="3606325177406951457">"Отпечаток добавлен"</string>
