--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -480,7 +480,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"Xóa"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Chạm vào cảm biến"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Đặt ngón tay lên cảm biến và nhấc lên sau khi cảm thấy rung"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Giữ thẳng ngón tay trên cảm biến cho đến khi bạn cảm thấy rung"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Áp vân tay vào cảm biến cho đến khi bạn cảm thấy rung"</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Chạm và giữ cảm biến vân tay"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Nhấc ngón tay lên rồi chạm lại"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Vui lòng chạm lần nữa"</string>
