--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -496,7 +496,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"حذف"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"المس زر الاستشعار"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"ضع إصبعك على زر الاستشعار ثمّ ارفعه بعد اهتزاز الجهاز"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"ثبِّت بصمة إصبعك على جهاز الاستشعار تمامًا حتى يتم اهتزاز الجهاز."</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"ثبِّت بصمة إصبعك على جهاز الاستشعار إلى أن يهتزّ الجهاز."</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"انقر مع الاستمرار على مستشعر بصمات الإصبع"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"ارفع إصبعك ثم المس زر الاستشعار مرة أخرى"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"مرة أخرى"</string>
@@ -504,7 +504,7 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"استمر في وضع إصبعك ورفعه لإضافة الأجزاء المختلفة لبصمة الإصبع"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"انقر مع الاستمرار في كل مرة يتحرك فيها رمز بصمة الإصبع. يساعد هذا على التقاط قدر أكبر من بصمة إصبعك."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"ضع طرف إصبعك على المستشعر."</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"في النهاية، استخدِم حواف إصبعك."</string>
+    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"وأخيرًا، استخدِم حواف إصبعك."</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"ضع جانب بصمة الإصبع على المستشعر واضغط مع الاستمرار ثم بدِّل إلى الجانب الآخر."</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"يساعد هذا على التقاط قدر أكبر من بصمة إصبعك."</string>
     <string name="security_settings_udfps_enroll_progress_a11y_message" msgid="6183535114682369699">"تسجيل بصمة الإصبع <xliff:g id="PERCENTAGE">%d</xliff:g> في المئة."</string>
