--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -496,7 +496,7 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Дакраніцеся некалькі разоў, каб адбітак быў больш дакладны"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Кожны раз падчас руху значка адбітка пальца ўтрымлівайце палец націснутым. Гэта працэдура дапаможа больш дакладна зафіксаваць адбітак пальца."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Прыкладзіце да датчыка кончык пальца"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Пасля прыкладзіце краі пальца"</string>
+    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Зараз прыкладзіце краі пальца"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Прыкладзіце палец да датчыка адным бокам і ўтрымлівайце яго, потым павярніце іншым бокам"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Гэта працэдура дапаможа больш дакладна зафіксаваць адбітак пальца"</string>
     <!-- String.format failed for translation -->
