--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -480,7 +480,7 @@
     <string name="security_settings_fingerprint_enroll_dialog_delete" msgid="6027141901007342389">"O‘chirish"</string>
     <string name="security_settings_fingerprint_enroll_start_title" msgid="7391368057800077604">"Sensorga tegining"</string>
     <string name="security_settings_fingerprint_enroll_start_message" msgid="5010227772754175346">"Barmoqni skanerga tekkizib, tebranishni his qilguncha bosib turing"</string>
-    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Tebranish sezilgunga qadar barmoqni sensor ustida tutib turing"</string>
+    <string name="security_settings_udfps_enroll_start_message" msgid="5032954588171487566">"Barmoqni tebranish sezilguniga qadar sensorga bosib turing"</string>
     <string name="security_settings_fingerprint_enroll_udfps_title" msgid="6665610134560896895">"Barmoq izi sensorini bosib turing"</string>
     <string name="security_settings_fingerprint_enroll_repeat_title" msgid="9172202128243545021">"Bir necha marta tekkizing"</string>
     <string name="security_settings_udfps_enroll_title_one_more_time" msgid="424937043843482410">"Yana bir marta"</string>
@@ -488,7 +488,7 @@
     <string name="security_settings_fingerprint_enroll_repeat_message" msgid="5382958363770893577">"Barmoq izingizni butunlay skanerlash uchun uni biroz suring"</string>
     <string name="security_settings_udfps_enroll_repeat_message" msgid="2213106975297867798">"Har safar barmoq izi belgisi harakatlanganda bosib turing. Bu barmoq izingizning toʻliq yozib olinishiga yordam beradi."</string>
     <string name="security_settings_udfps_enroll_fingertip_title" msgid="4123142574168831116">"Barmogʻingiz uchini sensorga joylang"</string>
-    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Endi barmoqlaringiz chetlarini skanerlash kerak"</string>
+    <string name="security_settings_udfps_enroll_edge_title" msgid="6137605344819152477">"Endi barmoq chetlarini skanerlang"</string>
     <string name="security_settings_udfps_enroll_edge_message" msgid="4455253923746607702">"Barmoq izingizning yonlarini sensorga joylashtiring va tutib turing, keyin boshqa yonga almashtiring"</string>
     <string name="security_settings_udfps_enroll_repeat_a11y_message" msgid="2785464357615568197">"Bu barmoq izingizning toʻliq yozib olinishiga yordam beradi"</string>
     <!-- String.format failed for translation -->
@@ -3211,7 +3211,7 @@
     <string name="data_usage_metered_no" msgid="1685828958417926268">"Bepul"</string>
     <string name="data_usage_disclaimer" msgid="3271450299386176770">"Aloqa operatorining hisob-kitobi qurilmanikidan farq qilishi mumkin."</string>
     <string name="cryptkeeper_emergency_call" msgid="8369322820475703306">"Favqulodda chaqiruv"</string>
-    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"Suhbatga qaytish"</string>
+    <string name="cryptkeeper_return_to_call" msgid="3857250752781151232">"Chaqiruvga qaytish"</string>
     <string name="vpn_name" msgid="3806456074909253262">"Tarmoq nomi"</string>
     <string name="vpn_type" msgid="5533202873260826663">"Turi"</string>
     <string name="vpn_server" msgid="2908816134941973935">"Server manzili"</string>
